1. Collection API Улучшения [#70623] - Рефакторинг кода