@@ -1,9 +1,6 @@
 package ru.job4j.lite.generics;
 
 import org.junit.Test;
-
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import static org.hamcrest.core.Is.is;
@@ -22,12 +19,11 @@ public class ConvertUserTest {
      */
     @Test
     public void whenConvertListOfUsersToHashMap() {
-        List<User> users = new ArrayList<>();
-        users.addAll(Arrays.asList(
+        List<User> users = List.of(
                 new User("Ivan", "Piter"),
                 new User("Maxim", "Tver"),
                 new User("Roman", "Moscow")
-        ));
+        );
         ConvertUser conUser = new ConvertUser();
         HashMap<Integer, User> result = conUser.process(users);
         HashMap<Integer, User> expected = new HashMap<>();
