@@ -1,12 +1,9 @@
 package ru.job4j.lite.sort;
 
 import org.junit.Test;
-
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
-import java.util.TreeSet;
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
 /**
@@ -22,22 +19,20 @@ public class SortUserTest {
      */
     @Test
     public void whenListOfUsersConvertToTreeSet() {
-        List<User> users = new ArrayList<>();
-        users.addAll(Arrays.asList(
+        List<User> users = List.of(
                 new User("Ivan", 50),
                 new User("Nikola", 17),
                 new User("Fedor", 45),
                 new User("Sasha", 25)
-        ));
+        );
         SortUser sortUser = new SortUser();
         Set<User> result = sortUser.sort(users);
-        Set<User> expected = new TreeSet<>();
-        expected.addAll(Arrays.asList(
+        Set<User> expected = Set.of(
                 new User("Ivan", 50),
                 new User("Nikola", 17),
                 new User("Fedor", 45),
                 new User("Sasha", 25)
-        ));
+        );
         assertThat(result, is(expected));
     }
     /**
@@ -45,8 +40,7 @@ public class SortUserTest {
      */
     @Test
     public void whenListOfUsersSortByUsersHashCode() {
-        List<User> users = new ArrayList<>();
-        users.addAll(Arrays.asList(
+        List<User> users = new ArrayList<>(List.of(
                 new User("Ivan", 50),
                 new User("Nikola", 17),
                 new User("Fedor", 45),
@@ -71,8 +65,7 @@ public class SortUserTest {
      */
     @Test
     public void whenListOfUsersSortByNameLength() {
-        List<User> users = new ArrayList<>();
-        users.addAll(Arrays.asList(
+        List<User> users = new ArrayList<>(List.of(
                 new User("Ivan", 50),
                 new User("Nikola", 17),
                 new User("Fedor", 45),
@@ -80,8 +73,7 @@ public class SortUserTest {
         ));
         SortUser sortUser = new SortUser();
         List<User> result = sortUser.sortLength(users);
-        List<User> expected = new ArrayList<>();
-        expected.addAll(Arrays.asList(
+        List<User> expected = new ArrayList<>(List.of(
                 new User("Ivan", 50),
                 new User("Fedor", 45),
                 new User("Nikola", 17),
