@@ -1,13 +1,10 @@
 package ru.job4j.lite.user;
 
 import org.junit.Test;
-
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 import java.util.TreeSet;
-
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
 
@@ -24,8 +21,7 @@ public class SortUserTest {
      */
     @Test
     public void whenListOfUsersConvertToTreeSet() {
-        List<User> users = new ArrayList<>();
-        users.addAll(Arrays.asList(
+        List<User> users = new ArrayList<>(List.of(
                 new User("Alex", 50),
                 new User("Nikola", 17),
                 new User("Fedor", 45),
@@ -33,8 +29,7 @@ public class SortUserTest {
         ));
         SortUser sortUser = new SortUser();
         Set<User> result = sortUser.sort(users);
-        Set<User> expect = new TreeSet<>();
-        expect.addAll(Arrays.asList(
+        Set<User> expect = new TreeSet<>(Set.of(
                 new User("Alex", 50),
                 new User("Nikola", 17),
                 new User("Fedor", 45),
@@ -48,8 +43,7 @@ public class SortUserTest {
      */
     @Test
     public void whenListOfUsersSortByNameLength() {
-        List<User> users = new ArrayList<>();
-        users.addAll(Arrays.asList(
+        List<User> users = new ArrayList<>(List.of(
                 new User("Alexandr", 50),
                 new User("Nik", 17),
                 new User("Vasya", 25),
@@ -57,8 +51,7 @@ public class SortUserTest {
         ));
         SortUser sortUser = new SortUser();
         List<User> result = sortUser.sortNameLength(users);
-        List<User> expect = new ArrayList<>();
-        expect.addAll(Arrays.asList(
+        List<User> expect = new ArrayList<>(List.of(
                 new User("Nik", 17),
                 new User("Ivan", 36),
                 new User("Vasya", 25),
@@ -72,8 +65,7 @@ public class SortUserTest {
      */
     @Test
     public void whenListOfUserSortByAllFields() {
-        List<User> users = new ArrayList<>();
-        users.addAll(Arrays.asList(
+        List<User> users = new ArrayList<>(List.of(
                 new User("Alexandr", 50),
                 new User("Ivan", 36),
                 new User("Alexandr", 25),
@@ -81,8 +73,7 @@ public class SortUserTest {
         ));
         SortUser sortUser = new SortUser();
         List<User> result = sortUser.sortByAllFields(users);
-        List<User> expect = new ArrayList<>();
-        expect.addAll(Arrays.asList(
+        List<User> expect = new ArrayList<>(List.of(
                 new User("Alexandr", 25),
                 new User("Alexandr", 50),
                 new User("Ivan", 30),
